--- a/index.html
+++ b/index.html
@@ -712,16 +712,26 @@
 {"repoFullName": "dawinderS/SortingAlgos", "stargazersCount": 2},
 {"repoFullName": "Myphz/sortvisualizer-gui", "stargazersCount": 2}
 ]
+   randomize(data);
 
    console.log("hello world")
    const view = document.getElementById("view");
    for (let i = 0; i < data.length; i++) {
       const repo = data[i];
       const div = document.createElement('div');
-      div.style.height = `${Math.log(repo.stargazersCount)*100}px`;
+      div.style.height = `${Math.log(repo.stargazersCount)*100-50}px`;
       div.style.width = `10px`;
       div.style.backgroundColor = `red`;
       view.appendChild(div);
+   }
+
+   function randomize(arr) {
+      for (let i = 0; i < arr.length; i++) {
+         const j = Math.floor(Math.random() * arr.length);
+         const temp = arr[i];
+         arr[i] = arr[j];
+         arr[j] = temp;
+      }
    }
    </script>
 </body>
