--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
       const div = document.createElement('div');
       div.style.display = 'flex';
       div.style.alignItems = 'center';
-      div.style.marginBottom = '10px';
+      div.style.marginBottom = '-5px';
       div.style.borderRadius = '5px';
       div.style.boxShadow = 'rgba(31, 35, 40, 0.15) 0px 0px 0px 1px;';
       div.style.backgroundColor = 'white';
@@ -1049,6 +1049,7 @@
       const profile = document.createElement('img');
       profile.src = repo.ownerAvatarUrl;
       profile.loading = 'lazy'
+      profile.style.height='20px'
       profile.style.width='20px'
       profile.style.objectFit='cover'
       profile.style.borderRadius='50%'
@@ -1056,7 +1057,7 @@
 
       const starBar = document.createElement('div');
       starBar.style.width = `${Math.log(repo.stargazersCount)*100-50}px`;
-      starBar.style.height = '10px';
+      starBar.style.height = '6px';
       starBar.style.backgroundColor = `red`;
 
       div.appendChild(profile);
