--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>POC</title>
 </head>
 <body>
-   <div id="view" style="display: flex; flex-direction: column; align-items: flex-start;">
+   <div id="view" style="display: flex; flex-direction: row; align-items: flex-start;">
    </div>
 
    <script>
@@ -1040,8 +1040,9 @@
       const repo = data[i];
       const div = document.createElement('div');
       div.style.display = 'flex';
+      div.style.flexDirection = 'column';
       div.style.alignItems = 'center';
-      div.style.marginBottom = '-5px';
+      div.style.marginLeft = '-5px';
       div.style.borderRadius = '5px';
       div.style.boxShadow = 'rgba(31, 35, 40, 0.15) 0px 0px 0px 1px;';
       div.style.backgroundColor = 'white';
@@ -1056,12 +1057,12 @@
       profile.style.boxShadow = 'rgba(31, 35, 40, 0.15) 0px 0px 0px 1px;'
 
       const starBar = document.createElement('div');
-      starBar.style.width = `${Math.log(repo.stargazersCount)*100-50}px`;
-      starBar.style.height = '6px';
+      starBar.style.height = `${Math.log(repo.stargazersCount)*100-50}px`;
+      starBar.style.width = '2px';
       starBar.style.backgroundColor = `red`;
 
-      div.appendChild(profile);
       div.appendChild(starBar);
+      div.appendChild(profile);
 
       view.appendChild(div);
    }
