--- a/index.html
+++ b/index.html
@@ -1083,6 +1083,21 @@
       view.appendChild(div);
       view.appendChild(popOver)
 
+      function generateGetBoundingClientRect(x = 0, y = 0) {
+         return () => ({
+            width: 0,
+            height: 0,
+            top: y,
+            right: x,
+            bottom: y,
+            left: x,
+         });
+      }
+
+      const virtualElement = {
+         getBoundingClientRect: generateGetBoundingClientRect(),
+      };
+
       div.addEventListener('mouseenter', () => {
          popOver.style.display = 'block';
          popOver.update();
@@ -1112,9 +1127,12 @@
          popOver.style.display = 'none';
       })
 
-      Popper.createPopper(div, popOver, {
-         placement: 'right',
-      })
+      const instance = Popper.createPopper(virtualElement, popOver)
+
+      document.addEventListener('mousemove', ({ clientX: x, clientY: y }) => {
+         virtualElement.getBoundingClientRect = generateGetBoundingClientRect(x, y);
+         instance.update();
+      });
    }
 
    function randomize(arr) {
