--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       const starBar = document.createElement('div');
       starBar.style.height = `${Math.log(repo.stargazersCount)*100}px`;
       starBar.style.width = '2px';
-      starBar.style.backgroundColor = `red`;
+      starBar.style.backgroundColor = `#2563eb`;
       starBar.classList.add('star-bar')
 
       const popOver = document.createElement('div');
