--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
    <link rel="stylesheet" href="index.css">
    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
 </head>
-<body>
-   <div id="view" style="display: flex; flex-direction: row; align-items: flex-end;">
+<body style="">
+   <div style="display: flex; justify-content: center;">
+      <div>
+         <div id="view" style="display: flex; flex-direction: row; align-items: flex-end;">
+         </div>
+      </div>
    </div>
-   <button>Sort</button>
-
-   </button>
 
    <script>
       let data = [
