--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
    <title>POC</title>
    <link rel="stylesheet" href="index.css">
    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
+   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body style="background-color: #030712;">
-   <div style="display: flex; justify-content: center;">
+   <div class="" style="display: flex; justify-content: center; align-items: center;">
+      <div class="w-6 mr-8">
+         <div class="origin-top-left translate-y-32 -rotate-90 pr-12 whitespace-nowrap">
+            <span class="text-white">Number of </span>
+            <svg class="inline w-4"  fill="var(--yellow-300)" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m12.672.668 3.059 6.197 6.838.993a.75.75 0 0 1 .416 1.28l-4.948 4.823 1.168 6.812a.75.75 0 0 1-1.088.79L12 18.347l-6.116 3.216a.75.75 0 0 1-1.088-.791l1.168-6.811-4.948-4.823a.749.749 0 0 1 .416-1.279l6.838-.994L11.327.668a.75.75 0 0 1 1.345 0Z"/></svg>
+            <span class="text-white -ml-0.5">s</span>
+         </div>
+      </div>
       <div>
-         <div id="view" style="display: flex; flex-direction: row; align-items: flex-end;">
+         <div>
+            <div id="view" style="display: flex; flex-direction: row; align-items: flex-end;">
+            </div>
          </div>
       </div>
    </div>
