--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
          </div>
       </div>
    </div>
+   <div class="flex justify-center">
+      <button type="button" class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Sort</button>
+   </div>
    <script>
       let data = [
 {"repoFullName": "bingmann/sound-of-sorting", "stargazersCount": 771, "ownerAvatarUrl": "https://avatars.githubusercontent.com/u/2604907?v=4"},
@@ -138,7 +141,6 @@
       mouseY = clientY;
    };
 
-   console.log("hello world")
    const view = document.getElementById("view");
    for (let i = 0; i < data.length; i++) {
       const repo = data[i];
