--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
             <svg class="inline w-5"  fill="var(--yellow-300)" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="m12.672.668 3.059 6.197 6.838.993a.75.75 0 0 1 .416 1.28l-4.948 4.823 1.168 6.812a.75.75 0 0 1-1.088.79L12 18.347l-6.116 3.216a.75.75 0 0 1-1.088-.791l1.168-6.811-4.948-4.823a.749.749 0 0 1 .416-1.279l6.838-.994L11.327.668a.75.75 0 0 1 1.345 0Z"/></svg>
          </div>
       </div>
+
       <div>
          <div>
             <div id="view" style="display: flex; flex-direction: row; align-items: flex-end;">
+            </div>
+            <div class="-ml-2">
+               <input id="default-range" type="range" value="50" class="w-full h-2 bg-gray-700 rounded-lg appearance-none cursor-pointer">
             </div>
          </div>
       </div>
