Revert "slider attempt"
This reverts commit 622b313faf40ac632440036f5d58f9f9112d5a19.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id="view" style="display: flex; flex-direction: row; align-items: flex-end;">
             </div>
             <div class="-ml-2">
-               <input id="default-range" class="slider" type="range" value="100" class="">
+               <input id="default-range" type="range" value="50" class="w-full h-2 bg-gray-700 rounded-lg appearance-none cursor-pointer">
             </div>
          </div>
       </div>
