--- a/index.html
+++ b/index.html
@@ -191,10 +191,9 @@
       popOver.classList.add("p-2")
 
       const virtualSlider = document.createElement('div');
-      virtualSlider.classList.add("flex", "flex-col", "items-center")
+      virtualSlider.classList.add("flex", "flex-col", "items-center", "mt-2")
 
       const pointer = document.createElement('div');
-      // selector.classList.add("w-4", "h-4", "bg-white", "rounded-full")
       pointer.classList.add("w-0", "h-0")
       pointer.style.borderLeft = '5px solid transparent';
       pointer.style.borderRight = '5px solid transparent';
