--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
    </div>
    <div class="flex justify-center mt-2">
       <button type="button" class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Sort</button>
+      <div id="repository-view">
+
+      </div>
    </div>
    <script>
       let data = [
@@ -218,11 +221,8 @@
 
       virtualSlider.addEventListener('pointerdown', (event) => {
          event.preventDefault();
-         pointers[currentPointer].classList.add("hidden")
-         divs[currentPointer].classList.remove("hover")
-         currentPointer = pointers.indexOf(pointer)
-         pointers[currentPointer].classList.remove("hidden")
-         divs[currentPointer].classList.add("hover")
+         const next = pointers.indexOf(pointer)
+         selectRepository(next);
          activePointer = true;
       })
 
@@ -230,11 +230,8 @@
          event.preventDefault();
          if (activePointer) {
             _.throttle(() => {
-               pointers[currentPointer].classList.add("hidden")
-               divs[currentPointer].classList.remove("hover")
-               currentPointer = findClosestPointer(x)
-               pointers[currentPointer].classList.remove("hidden")
-               divs[currentPointer].classList.add("hover")
+               const next = findClosestPointer(x)
+               selectRepository(next);
             }, 50)();
          }
       })
@@ -256,6 +253,14 @@
             }
          }
          return left;
+      }
+
+      function selectRepository(index) {
+         pointers[currentPointer].classList.add("hidden")
+         divs[currentPointer].classList.remove("hover")
+         currentPointer = index;
+         pointers[currentPointer].classList.remove("hidden")
+         divs[currentPointer].classList.add("hover")
       }
 
       document.addEventListener('pointerup', (event) => {
